[package]
name = "learn-wgpu2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
lexpr = "=0.2.7"
serde-lexpr = "=0.1.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
 

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"] }
# wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
